// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connections should count gauges 1`] = `
{
  "sources": {
    "count": 7,
    "nodes": [
      {
        "gauges": {
          "count": 0,
        },
        "id": "1628c0a2-1a0a-11e8-accf-0ed5f89f718b",
        "name": "Alps",
      },
      {
        "gauges": {
          "count": 0,
        },
        "id": "ce81ed89-5558-49d1-86f6-1fa8bcd944bb",
        "name": "Empty",
      },
      {
        "gauges": {
          "count": 2,
        },
        "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Galicia",
      },
      {
        "gauges": {
          "count": 2,
        },
        "id": "9f962a34-bff9-11e7-abc4-cec278b6b50a",
        "name": "Galicia2",
      },
      {
        "gauges": {
          "count": 4,
        },
        "id": "53af1a54-19fe-11e8-accf-0ed5f89f718b",
        "name": "Georgia",
      },
      {
        "gauges": {
          "count": 4,
        },
        "id": "786251d4-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Norway",
      },
      {
        "gauges": {
          "count": 1,
        },
        "id": "8e37e9d2-1d7b-11e8-b467-0ed5f89f718b",
        "name": "Россия",
      },
    ],
  },
}
`;

exports[`connections should count regions 1`] = `
{
  "sources": {
    "count": 7,
    "nodes": [
      {
        "id": "1628c0a2-1a0a-11e8-accf-0ed5f89f718b",
        "name": "Alps",
        "regions": {
          "count": 0,
        },
      },
      {
        "id": "ce81ed89-5558-49d1-86f6-1fa8bcd944bb",
        "name": "Empty",
        "regions": {
          "count": 0,
        },
      },
      {
        "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Galicia",
        "regions": {
          "count": 2,
        },
      },
      {
        "id": "9f962a34-bff9-11e7-abc4-cec278b6b50a",
        "name": "Galicia2",
        "regions": {
          "count": 1,
        },
      },
      {
        "id": "53af1a54-19fe-11e8-accf-0ed5f89f718b",
        "name": "Georgia",
        "regions": {
          "count": 1,
        },
      },
      {
        "id": "786251d4-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Norway",
        "regions": {
          "count": 1,
        },
      },
      {
        "id": "8e37e9d2-1d7b-11e8-b467-0ed5f89f718b",
        "name": "Россия",
        "regions": {
          "count": 0,
        },
      },
    ],
  },
}
`;

exports[`data should list sources 1`] = `
[
  {
    "cron": "10 * * * *",
    "enabled": true,
    "id": "1628c0a2-1a0a-11e8-accf-0ed5f89f718b",
    "name": "Alps",
    "requestParams": null,
    "script": "alps",
    "url": "http://yandex.ru",
  },
  {
    "cron": null,
    "enabled": false,
    "id": "ce81ed89-5558-49d1-86f6-1fa8bcd944bb",
    "name": "Empty",
    "requestParams": {
      "foo": "bar",
    },
    "script": "empty",
    "url": null,
  },
  {
    "cron": "0 * * * *",
    "enabled": true,
    "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
    "name": "Galicia",
    "requestParams": null,
    "script": "galicia",
    "url": "http://ya.ru",
  },
  {
    "cron": null,
    "enabled": true,
    "id": "9f962a34-bff9-11e7-abc4-cec278b6b50a",
    "name": "Galicia2",
    "requestParams": null,
    "script": "galicia2",
    "url": "http://yandex.ru",
  },
  {
    "cron": null,
    "enabled": false,
    "id": "53af1a54-19fe-11e8-accf-0ed5f89f718b",
    "name": "Georgia",
    "requestParams": null,
    "script": "one_by_one",
    "url": null,
  },
  {
    "cron": null,
    "enabled": true,
    "id": "786251d4-aa9d-11e7-abc4-cec278b6b50a",
    "name": "Norway",
    "requestParams": null,
    "script": "norway",
    "url": null,
  },
  {
    "cron": null,
    "enabled": false,
    "id": "8e37e9d2-1d7b-11e8-b467-0ed5f89f718b",
    "name": "Россия",
    "requestParams": {
      "foo": "bar",
    },
    "script": "russia",
    "url": null,
  },
]
`;
